src/test/deca/context/valid/created/test-comparaison-int-int.deca
//Description :
// Test d'une opération de comparaison
//
// Resultats :
//


{
    1 <3 ;
}
