src/test/deca/context/invalid/created/main-return-int.deca
//Description :
// Test d'un return entier dans le main
//
// Resultats :
// Erreur


{
    return 1;
}
